# CellScript

./: .audit-report-20260602.md  .audit-report-redteam-20260603.md  .gitignore  A2_TYPE_RESOLUTION_AUDIT.md  AGENTS.md  CHANGELOG.md  CODING_STYLE.md  Cargo.toml  README.md  README_CH.md  README_REVIEW.md  RUST_COMPARATIVE_AUDIT.md  SECURITY_AUDIT_SEMANTIC.md
.playwright-mcp/: page-2026-06-02T05-35-47-870Z.yml  page-2026-06-02T05-38-32-816Z.yml  page-2026-06-02T05-41-08-297Z.yml  page-2026-06-02T05-49-42-482Z.yml  page-2026-06-02T05-51-04-536Z.yml  page-2026-06-02T06-05-49-895Z.yml  page-2026-06-02T06-17-07-504Z.yml  page-2026-06-02T06-22-57-012Z.yml  page-2026-06-02T06-42-26-450Z.yml  page-2026-06-02T07-47-12-690Z.yml  page-2026-06-02T07-51-19-998Z.yml  page-2026-06-02T07-52-23-878Z.yml
crates/cellscript-ckb-adapter/: Cargo.toml
crates/cellscript-ckb-adapter/src/: lib.rs
docs/: CELLSCRIPT_0_13_1_PLAN.md  CELLSCRIPT_0_13_RELEASE_NOTES_DRAFT.md  CELLSCRIPT_0_14_SUPER_AUDIT.md  CELLSCRIPT_0_15_PRE_RELEASE_AUDIT_AND_HARDENING.md  CELLSCRIPT_0_15_RELEASE_NOTES_DRAFT.md  CELLSCRIPT_0_15_ROADMAP.md  CELLSCRIPT_0_16_RELEASE_NOTES_DRAFT.md  CELLSCRIPT_0_18_ROADMAP.md  CELLSCRIPT_0_19_ROADMAP.md  CELLSCRIPT_0_20_ROADMAP.md  CELLSCRIPT_0_21_ROADMAP.md  CELLSCRIPT_CAPACITY_AND_BUILDER_CONTRACT.md  CELLSCRIPT_CELLFABRIC_BRIDGE.md  CELLSCRIPT_CKB_ADAPTER.md  CELLSCRIPT_CKB_DEPLOYMENT_MANIFEST.md  CELLSCRIPT_CKB_ECOSYSTEM_REUSE_AUDIT.md  CELLSCRIPT_CKB_LANGUAGE_AUDIT.md  CELLSCRIPT_CKB_STD_COMPAT.md  CELLSCRIPT_COLLECTIONS_SUPPORT_MATRIX.md  CELLSCRIPT_DEPENDENCY_PACKAGE_CACHE_AUDIT.md  CELLSCRIPT_ENTRY_WITNESS_ABI.md  CELLSCRIPT_ERROR_FLOW_AND_PROOF_AUDIT.md  CELLSCRIPT_EXAMPLE_BUSINESS_FLOWS.md  CELLSCRIPT_GATE_POLICY.md  CELLSCRIPT_GRAMMAR_GOVERNANCE_RFC.md  CELLSCRIPT_LINEAR_OWNERSHIP.md  CELLSCRIPT_MOLECULE_IFRN_DESIGN_SPACE_AUDIT_zh-cn.md  CELLSCRIPT_MOLECULE_IFRN_DESIGN_SPACE_IMPROVEMENT_REPORT.md  CELLSCRIPT_MUTATE_AND_REPLACEMENT_OUTPUTS.md  CELLSCRIPT_OUTPUT_BINDINGS.md  CELLSCRIPT_PACKAGE_PROVENANCE_AND_DEPLOYMENT_IDENTITY.md  CELLSCRIPT_REGISTRY_PHASE1.md  CELLSCRIPT_ROADMAP.md  CELLSCRIPT_RUNTIME_ERROR_CODES.md  CELLSCRIPT_SCHEDULER_HINTS.md  CELLSCRIPT_SIGNATURE_DIRECTION_EXECUTION_PLAN.md  CELLSCRIPT_SURFACE_ELEGANCE_RFC.md  CELLSCRIPT_SYNTAX_COMBO_AUDIT_METHODOLOGY.md  CELLSCRIPT_SYNTAX_GOVERNANCE.md  README.md  (+1 more)
examples/: amm_pool.cell  launch.cell  multisig.cell  nft.cell  registry.cell  timelock.cell  token.cell  vesting.cell
roadmap/: CELLSCRIPT_0_13_RELEASE_SCOPE.md  CELLSCRIPT_0_13_ROADMAP.md  CELLSCRIPT_0_13_TODOLIST.md  CELLSCRIPT_0_14_ROADMAP.md  CELLSCRIPT_0_15_ROADMAP.md  CELLSCRIPT_0_16_ROADMAP.md  CELLSCRIPT_ROADMAP.md  CELLSCRIPT_ROADMAP_OVERVIEW.md
scripts/: cellscript_0_14_scope_audit.sh  cellscript_cellfabric_bridge_smoke.sh  cellscript_ckb_adapter_acceptance.sh  cellscript_ckb_release_gate.sh  cellscript_gate.sh  cellscript_syntax_combo_audit.py  ckb_cellscript_acceptance.sh  install.sh  novaseal_agreement_devnet_stateful_live.py  novaseal_bip340_tcb_review.py  novaseal_btc_spv_evidence_adapter.py  novaseal_devnet_stateful_acceptance.py  novaseal_devnet_stateful_acceptance.sh  novaseal_devnet_stateful_live.py  novaseal_external_attestation_adapter.py  novaseal_external_evidence_handoff_bundle.py  novaseal_fiber_node_experiments.py  novaseal_planned_profiles_devnet_stateful_live.py  novaseal_production_gates.py  novaseal_profile_operator_fixtures.py  novaseal_service_builder_fixtures.py  (+3 more)
(+373 files in other folders)
