[package]
name = "cellscript"
version = "0.16.0"
edition = "2021"
rust-version = "1.92.0"
autobins = false
authors = ["CellScript Core Team"]
description = "CellScript compiler for the Cell model"
license = "MIT"
repository = "https://github.com/a19q3/CellScript"
exclude = [
    ".audit-report*.md",
    ".cap/",
    ".gitignore",
    ".playwright-mcp/",
    ".rustfmt.toml",
    ".github/",
    "A2_TYPE_RESOLUTION_AUDIT.md",
    "RUST_COMPARATIVE_AUDIT.md",
    "SECURITY_AUDIT_SEMANTIC.md",
    "cellscript-*.png",
    "docs/",
    "docs/wiki/",
    "editors/",
    "proposals/",
    "scripts/__pycache__/",
    "src/bin/",
    "tools/",
    "website/",
]

[[bin]]
name = "cellc"
path = "src/main.rs"
test = false

[lib]
name = "cellscript"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake2b_simd = "1.0"
sha2 = "0.10"
toml = "0.8"
hex = "0.4"

indexmap = "2.2"
stacker = "0.1"

log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

colored = "2.1"

camino = "1.1"
ckb-vm = { version = "0.24", features = ["asm", "detect-asm"], optional = true }

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt"] }

[features]
default = []
vm-runner = ["dep:ckb-vm"]
ckb-acceptance = []

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
