[package]
name = "cellscript-ckb-adapter"
version = "0.19.0"
edition = "2021"
rust-version = "1.85.0"
publish = false
description = "Headless CKB adapter for CellScript compiler action plans"
license = "MIT"

[dependencies]
anyhow = "1.0"
ckb-jsonrpc-types = "1.0.0"
ckb-hash = "1.0.0"
ckb-sdk = { path = "../../../ckb-sdk-rust", default-features = false }
ckb-types = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
